sample/error/eval_equal.bfr
let _ = (1 = "1")

codegen []